Fix: avoid overflow of menu on top of Narayam extension and other screen elements
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@88040 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/WebFonts/css/webfonts.css
+++ b/extensions/WebFonts/css/webfonts.css
@@ -8,6 +8,7 @@ div#webfonts-fonts{
 	margin: 0;
 	padding:5px;
 	font-size: 100%;
+	z-index: 99999;
 }
 
 
